--- a/Ejercicio2.html
+++ b/Ejercicio2.html
@@ -16,17 +16,40 @@
   <a href="#" class="w3-bar-item w3-button">Quiénes somos</a>
   <a href="#" class="w3-bar-item w3-button"></a>
   <a href="#" class="w3-bar-item w3-button">Soporte</a>
-  <p>Datos academicos</p>
+  <table>
+  <tr>
+    <th>Nombre</th>
+    <th>Edad</th>
+    <th>Peso</th>    
+    <th>Estatura</th>
+    <th>País</th>
+  </tr>
+  <tr>
+    <td>Jaime Andrés Torres  </td>
+    <td>21</td>
+    <td>70kg</td>
+    <td>172cm</td>
+    <td>Colombia</td>
+  </tr>
+  
+</table>
+  
+  <p><b>Datos academicos</b></p>
   <ol type=”A”>
   <li>Colegio: Santo Tomás de Aquino</li>
   <li>Universidad: Los Andes</li>
   <li>Carreca: Ing. Sistemas (ocatvo semestre)</li>
 </ol>
+
+<p><b>Intereses</b></p>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/X3Zs-HZczUM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
 
 
 <footer>
+<p><b>Contactos</b></p>
   <p>Author: Jaime Andrés Torres<br>
+  <p>Tel: 3003181073<br>
   <a href="ja.torresl@uniandes.edu.co">ja.torresl@uniandes.edu.co</a>
   <a href="https://www.facebook.com/jaimeandres.t.3/">Facebook</a>
   </p>
