--- a/Ejercicio2.html
+++ b/Ejercicio2.html
@@ -44,6 +44,30 @@
 <p><b>Intereses</b></p>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/X3Zs-HZczUM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
+<h3>Contact Form</h3>
+
+<div class="container">
+
+    <label for="fname">Nombre</label>
+    <input type="text" id="fname" name="firstname" placeholder="Nombre..">
+
+    <label for="lname">Apellido</label>
+    <input type="text" id="lname" name="lastname" placeholder="Apellido">
+
+    <label for="country">Paía</label>
+    <select id="country" name="country">
+      <option value="australia">Colombia</option>
+      <option value="canada">Venezuela</option>
+      <option value="usa">USA</option>
+    </select>
+
+    <label for="subject">Asunto</label>
+    <textarea id="subject" name="subject"  style="height:200px"></textarea>
+
+    <input type="submit" value="Submit">
+ 
+</div>
+
 
 
 <footer>
